--- a/psdaq/psdaq/cnf/lab3-ric.cnf
+++ b/psdaq/psdaq/cnf/lab3-ric.cnf
@@ -38,8 +38,8 @@ meb_cmd = task_set+'monReqServer -P tst -C '+collect_host+' -M '+prom_cfg_dir+' 
 
 procmgr_config = [
  {                         id:'groupca',     flags:'s',   conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
- {                         id:'modca1',                   conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
- {                         id:'modca2',                   conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
+ {                         id:'xpmpva1',                  conda:conda_rel, env:epics_env, cmd:'xpmpva DAQ:LAB2:XPM:1'},
+ {                         id:'xpmpva2',                  conda:conda_rel, env:epics_env, cmd:'xpmpva DAQ:LAB2:XPM:2'},
  { host: collect_host,     id:'control',     flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P tst -r /dev/null -S 1'},
  {                         id:'control_gui', flags:'p',   conda:conda_rel,                cmd:'control_gui -H '+collect_host},
 
