--- a/psdaq/psdaq/cnf/lab3-simvalid.cnf
+++ b/psdaq/psdaq/cnf/lab3-simvalid.cnf
@@ -21,7 +21,7 @@ conda_rel = 'ps-2.0.1'
 procmgr_config = [
  {                        id:'partca',flags:'s', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
  {                        id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
- {                        id:'modca'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
+ {                        id:'xpmpva'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmpva DAQ:LAB2:XPM:2'},
 
 # { host: 'drp-tst-dev002', id:'simv017', flags:'s', conda:conda_rel, cmd:'kcuSimValid -C '+platform+',320,0xf -F -N -v0xff'},
 # { host: 'drp-tst-dev018', id:'simv018', flags:'s', conda:conda_rel, cmd:'kcuSimValid -d /dev/datadev_0 -C '+platform+',320,0x1 -F -N -v0xff'},
