--- a/psdaq/psdaq/cnf/lab3-xtpg.cnf
+++ b/psdaq/psdaq/cnf/lab3-xtpg.cnf
@@ -23,8 +23,8 @@ shelf = '3'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { host: epics_host,  id:'modcas' , port:'29551', flags:'s', conda:conda_rel, env:epics_env, cmd:'modcas -P DAQ:LAB2:XPM:'+shelf},
- {                    id:'modca'  ,               flags:'s', conda:conda_rel, env:epics_env, cmd:'modca -x DAQ:LAB2:XPM:'+shelf},
+ { host: epics_host,  id:'xpmpvas' , port:'29551', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmpvas -P DAQ:LAB2:XPM:'+shelf},
+ {                    id:'xpmpva'  ,               flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmpva -x DAQ:LAB2:XPM:'+shelf},
  {                    id:'xpmioc' , port:'29572', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a 10.0.3.104 -P DAQ:LAB2'},
 
  {                    id:'partca' ,               flags:'s', conda:conda_rel, env:epics_env, cmd:'partca -x DAQ:LAB2:PART:5'},
