--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -20,7 +20,7 @@ collect_host = 'drp-tst-acc06'
 
 procmgr_config = [
  {                        id:'partca-'+platform, conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
- {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
  { host: collect_host,    id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -P tst -B DAQ:LAB2 -x 2'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -t 30000 -H'+collect_host+' -E'},
  #{                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H'+collect_host+' -L logs'},
