--- a/psdaq/psdaq/cnf/asc-base.cnf
+++ b/psdaq/psdaq/cnf/asc-base.cnf
@@ -27,5 +27,5 @@ procmgr_config = [
 # { id:'pykcu',   port:'29471', flags:'s', conda:conda_rel, env:epics_env, cmd:'pykcu'},
 
 ## procstat
- { id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ { id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' p'+platform+'.cnf.last'},
 ]
