--- a/psdaq/psdaq/cnf/lab3-ric.cnf
+++ b/psdaq/psdaq/cnf/lab3-ric.cnf
@@ -96,5 +96,5 @@ procmgr_config = [
  #{ host: 'drp-tst-dev018', id:'cam_18', flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D AreaDetector' },
 
  # procstat
- {                         id:'procstat',    flags:'p',   conda:conda_rel,                cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                         id:'procstat',    flags:'p',   conda:conda_rel,                cmd:'procstat p'+platform+'.cnf.last'},
 ]
