--- a/psdaq/psdaq/cnf/tmo.cnf
+++ b/psdaq/psdaq/cnf/tmo.cnf
@@ -3,7 +3,8 @@ username = 'lcls2'
 
 epics_host = 'daq-tst-dev02'
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
-conda_rel = 'ps-2.0.11'
+#conda_rel = 'ps-2.0.11'
+conda_rel = 'ps-2.0.5'
 hsd_epics_dev02 = 'DAQ:LAB2:HSD:DEV02'
 hsd_epics_dev06 = 'DAQ:LAB2:HSD:DEV06'
 
@@ -55,16 +56,17 @@ procmgr_config = [
  {                         id:'control_gui', flags:'p',    conda:conda_rel,                cmd:'control_gui -H '+collect_host},
 
  # TEB
- { host: 'drp-tst-dev002', id:'teb2',        flags:'sxpu', conda:conda_rel, cmd:teb_cmd},
+ { host: 'drp-tst-dev016', id:'teb16',       flags:'sxpu', conda:conda_rel, cmd:teb_cmd},
 
  # MEB
- { host: 'drp-tst-dev002', id:'meb2',        flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
+ { host: 'drp-tst-dev016', id:'meb1' ,       flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
+ #{ host: 'drp-tst-dev015', id:'meb2',        flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
 
  # PVA
- #{ host: 'drp-tst-dev002', id:'pva_2',       flags:'sxpu', conda:conda_rel, cmd: pva_cmd },
+ { host: 'drp-tst-dev002', id:'pva_2',       flags:'sxpu', conda:conda_rel, cmd: pva_cmd },
 
  # EpicsArch
- #{ host: 'drp-tst-dev003', id:'ea_3',        flags:'sxpu', conda:conda_rel, env:epics_env, cmd:ea_cmd},
+ { host: 'drp-tst-dev004', id:'ea_4',        flags:'sxpu', conda:conda_rel, env:epics_env, cmd:ea_cmd},
 
  # BLD - must currently run on dev018 since that's where the bld enet xface is
  { host: 'daq-tst-dev03',  id:'lclsbldsvc',  flags:'s',    conda:conda_rel, env:epics_env, cmd:'lclsBldServer -i enp1s0f1 -r 4'},
@@ -82,10 +84,10 @@ procmgr_config = [
 # { host: 'drp-tst-dev012', id:'timetool_12', flags:'xpu',  conda:conda_rel, cmd:drp_cmd+' -D TimeTool -d /dev/datadev_0'},
 
  # Timing System DRP
-# { host: 'drp-tst-dev003', id:'ts_3',        flags:'sxpu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem' },
+ { host: 'drp-tst-dev013', id:'tmots_13',    flags:'sxpu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem' },
 
  # Cam
-# { host: 'drp-tst-dev011', id:'cam_11',      flags:'spu',  conda:conda_rel, cmd:drp_cmd+' -D AreaDetector -k sim_length=14'},
+ { host: 'drp-tst-dev014', id:'cam_14',      flags:'sxpu', conda:conda_rel, cmd:drp_cmd+' -D AreaDetector -k sim_length=14'},
 
- {                         id:'procstat',     flags:'p',    conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                         id:'procstat',    flags:'p',    conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
 ]
